we updated the code with instructions on how to run it and what each sections does

--- a/create data 1.ipynb
+++ b/create data 1.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "4d16e3fa",
+   "metadata": {},
+   "source": [
+    "this file is used to create the data base and the tables and upload the data recrds to the corresponding tables"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "003caecd-2f39-481c-be13-058db5b4e5b3",
