--- a/create test data.ipynb
+++ b/create test data.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "c35d41cb",
+   "metadata": {},
+   "source": [
+    "we used this code to create the test_data table"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "d07a3b65-7ff1-46ff-9e90-ce62edb8dba4",
@@ -26,7 +34,7 @@
    "source": [
     "from sqlalchemy import create_engine, Column, Float, MetaData, Table\n",
     "\n",
-    "# Assuming you already have an engine created\n",
+    "# Assuming we already have an engine created\n",
     "engine = create_engine('sqlite:///my_data.db')\n",
     "metadata = MetaData(bind=engine)\n",
     "\n",
@@ -42,6 +50,12 @@
     "print(\"Table creation completed. Check the existing tables:\")\n",
     "print(engine.table_names())  # This will now list 'test_data' along with others\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5074f059",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
